# Netbox-Network-Canvas-plugin

./: .gitignore  404.html  CHANGELOG.md  Makefile  README.md  clear_netbox_data.py  debug_cables.py  debug_netbox_data.py  demo_enhanced_features.py  index.html  mkdocs.yml  populate_comprehensive_network.py  populate_demo_data.py  pyproject.toml  pyproject.toml.backup  quick_netbox_test.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: publish-pypi.yaml
changelog/: index.html
contributing/: index.html
docs/: features.md
features/: index.html
netbox_network_canvas_plugin/: __init__.py  pyproject.toml  urls.py  views.py  views_fixed.py.backup
netbox_network_canvas_plugin/static/netbox_network_canvas_plugin/: topology.css
netbox_network_canvas_plugin/templates/netbox_network_canvas_plugin/: dashboard_enhanced.html  dashboard_simple.html
search/: search_index.json
